# group-share-project

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  add_user_columns.py  base_main.html  base_user.html  clear_files_table.py  debug_upload.py  docker-compose.yml  index.html  login.html  member-management.html  pyproject.toml  quickstart.md  register.html  requirements-dev.txt  requirements.txt  simple-test.html  test-login.html  test_upload.py
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: __init__.py  app.py  config.py  extensions.py  main.py  requirements.txt
backend/api_docs/: README.md  auth_api.md  paper_api.md  progress_api.md  task_api.md
backend/data/: sessions.json
backend/database/: __init__.py  app.db-journal  connection.py  init_db.py
backend/dependencies/: __init__.py  auth.py  pagination.py
backend/models/: __init__.py  file.py  meeting.py  paper.py  research_progress.py  task.py  user.py
backend/repositories/: __init__.py  auth_repository.py  file_repository.py  material_repository.py  meeting_material_repository.py  meeting_repository.py  meeting_schedule_repository.py  member_management_repository.py  member_repository.py  message_repository.py  message_system_repository.py  paper_repository.py  progress_repository.py  research_progress_repository.py  research_tasks_repository.py  shared_resources_repository.py  task_repository.py  user_profile_repository.py  user_repository.py
backend/routers/: __init__.py  auth_router.py  dashboard_router.py  file_router.py  health_router.py  material_router.py  meeting_material_router.py  meeting_router.py  meeting_schedule_router.py  member_management_router.py  member_router.py  message_router.py  message_system_router.py  page_router.py  paper_router.py  research_progress_router.py  research_tasks_router.py  shared_resources_router.py  task_router.py  user_profile_router.py  user_router.py
backend/routes/: __init__.py  auth.py  files.py  health.py  materials.py  meetings.py  (+7 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
templates/: academic_website.html  blank.html  edit_password.html  git-error-1777908029757  gm_meeting-schedule-test_claude.html  gm_meeting_record.html  gm_meeting_schedule.html  gm_report_materials.html  index.html  login.html  member-management.html  paper_database.html  personal_profile.html  register.html  research_progress.html  research_tasks.html  rm_paper_database.html  rm_research_tasks.html  rm_share_file.html  settings.html  share-file.html  share_file.html  shared-files.html  test.html  tm_academic_website.html  tm_research_progress.html  tm_user_management.html  user_management.html  user_profile.html
templates-html/: blank.html  edit_password.html  gm_meeting_record.html  gm_meeting_schedule.html  gm_report_materials.html  index.html  login.html  rm_research_tasks.html  rm_share_file.html  tm_academic_website.html  tm_research_progress.html  tm_user_management.html  user_profile.html
(+127 files in other folders)
